--- a/build.gradle
+++ b/build.gradle
@@ -18,9 +18,13 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
+//        google()
         jcenter()
-        
+
+        maven{
+            url "https://maven.google.com"
+        }
+
     }
 }
 
